mutate/add-labels/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-add-labels
  namespace: add-labels-ns
spec:
  containers:
  - image: corp.reg.com/test-verify-image:signed
    name: test-add-labels

# kubectl apply -f mutate/add-labels/resource.yaml
# kubectl describe pod test-add-labels -n add-labels-ns | grep "Labels"
